Homework3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSE
    EQUALS
    ID
    IF
    NAME
    NEGATION
    SEMICOLON
    THEN
    VARIABLE
    WHILE

Grammar

Rule 0     S' -> expression
Rule 1     expression -> INTEGER
Rule 2     expression -> REAL
Rule 3     expression -> BOOLEAN
Rule 4     expression -> STRING
Rule 5     expression -> list
Rule 6     expression -> tuple
Rule 7     expression -> expression PLUS expression
Rule 8     expression -> expression MINUS expression
Rule 9     expression -> expression TIMES expression
Rule 10    expression -> expression DIVIDE expression
Rule 11    expression -> expression EXPONENT expression
Rule 12    expression -> expression DIV expression
Rule 13    expression -> expression MOD expression
Rule 14    expression -> BOOLEAN ORELSE BOOLEAN
Rule 15    expression -> BOOLEAN ANDALSO BOOLEAN
Rule 16    expression -> NOT BOOLEAN
Rule 17    expression -> expression LESS_THAN expression
Rule 18    expression -> expression GREATER_THAN expression
Rule 19    expression -> expression LESS_EQUAL expression
Rule 20    expression -> expression GREATER_EQUAL expression
Rule 21    expression -> expression EQUAL expression
Rule 22    expression -> expression NOT_EQUAL expression
Rule 23    list -> LBRACKET centerList RBRACKET
Rule 24    centerList -> centerList COMMA expression
Rule 25    centerList -> expression
Rule 26    expression -> expression IN list
Rule 27    expression -> list CON list
Rule 28    list -> LBRACKET RBRACKET
Rule 29    expression -> expression LBRACKET expression RBRACKET
Rule 30    expression -> LPAREN expression RPAREN
Rule 31    tuple -> LPAREN centerTuple RPAREN
Rule 32    tuple -> LPAREN centerTuple COMMA RPAREN
Rule 33    centerTuple -> centerTuple COMMA expression
Rule 34    centerTuple -> expression
Rule 35    expression -> expression IN tuple
Rule 36    expression -> tuple CON tuple
Rule 37    expression -> HASH expression tuple

Terminals, with rules where they appear

ANDALSO              : 15
BOOLEAN              : 3 14 14 15 15 16
COMMA                : 24 32 33
CON                  : 27 36
DIV                  : 12
DIVIDE               : 10
ELSE                 : 
EQUAL                : 21
EQUALS               : 
EXPONENT             : 11
GREATER_EQUAL        : 20
GREATER_THAN         : 18
HASH                 : 37
ID                   : 
IF                   : 
IN                   : 26 35
INTEGER              : 1
LBRACKET             : 23 28 29
LESS_EQUAL           : 19
LESS_THAN            : 17
LPAREN               : 30 31 32
MINUS                : 8
MOD                  : 13
NAME                 : 
NEGATION             : 
NOT                  : 16
NOT_EQUAL            : 22
ORELSE               : 14
PLUS                 : 7
RBRACKET             : 23 28 29
REAL                 : 2
RPAREN               : 30 31 32
SEMICOLON            : 
STRING               : 4
THEN                 : 
TIMES                : 9
VARIABLE             : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

centerList           : 23 24
centerTuple          : 31 32 33
expression           : 7 7 8 8 9 9 10 10 11 11 12 12 13 13 17 17 18 18 19 19 20 20 21 21 22 22 24 25 26 29 29 30 33 34 35 37 0
list                 : 5 26 27 27
tuple                : 6 35 36 36 37

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . INTEGER
    (2) expression -> . REAL
    (3) expression -> . BOOLEAN
    (4) expression -> . STRING
    (5) expression -> . list
    (6) expression -> . tuple
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression EXPONENT expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression MOD expression
    (14) expression -> . BOOLEAN ORELSE BOOLEAN
    (15) expression -> . BOOLEAN ANDALSO BOOLEAN
    (16) expression -> . NOT BOOLEAN
    (17) expression -> . expression LESS_THAN expression
    (18) expression -> . expression GREATER_THAN expression
    (19) expression -> . expression LESS_EQUAL expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression EQUAL expression
    (22) expression -> . expression NOT_EQUAL expression
    (26) expression -> . expression IN list
    (27) expression -> . list CON list
    (29) expression -> . expression LBRACKET expression RBRACKET
    (30) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression IN tuple
    (36) expression -> . tuple CON tuple
    (37) expression -> . HASH expression tuple
    (23) list -> . LBRACKET centerList RBRACKET
    (28) list -> . LBRACKET RBRACKET
    (31) tuple -> . LPAREN centerTuple RPAREN
    (32) tuple -> . LPAREN centerTuple COMMA RPAREN

    INTEGER         shift and go to state 2
    REAL            shift and go to state 3
    BOOLEAN         shift and go to state 4
    STRING          shift and go to state 5
    NOT             shift and go to state 8
    LPAREN          shift and go to state 10
    HASH            shift and go to state 11
    LBRACKET        shift and go to state 9

    expression                     shift and go to state 1
    list                           shift and go to state 6
    tuple                          shift and go to state 7

state 1

    (0) S' -> expression .
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . TIMES expression
    (10) expression -> expression . DIVIDE expression
    (11) expression -> expression . EXPONENT expression
    (12) expression -> expression . DIV expression
    (13) expression -> expression . MOD expression
    (17) expression -> expression . LESS_THAN expression
    (18) expression -> expression . GREATER_THAN expression
    (19) expression -> expression . LESS_EQUAL expression
    (20) expression -> expression . GREATER_EQUAL expression
    (21) expression -> expression . EQUAL expression
    (22) expression -> expression . NOT_EQUAL expression
    (26) expression -> expression . IN list
    (29) expression -> expression . LBRACKET expression RBRACKET
    (35) expression -> expression . IN tuple

    PLUS            shift and go to state 12
    MINUS           shift and go to state 13
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 15
    EXPONENT        shift and go to state 16
    DIV             shift and go to state 17
    MOD             shift and go to state 18
    LESS_THAN       shift and go to state 19
    GREATER_THAN    shift and go to state 20
    LESS_EQUAL      shift and go to state 21
    GREATER_EQUAL   shift and go to state 22
    EQUAL           shift and go to state 23
    NOT_EQUAL       shift and go to state 24
    IN              shift and go to state 25
    LBRACKET        shift and go to state 26


state 2

    (1) expression -> INTEGER .

    PLUS            reduce using rule 1 (expression -> INTEGER .)
    MINUS           reduce using rule 1 (expression -> INTEGER .)
    TIMES           reduce using rule 1 (expression -> INTEGER .)
    DIVIDE          reduce using rule 1 (expression -> INTEGER .)
    EXPONENT        reduce using rule 1 (expression -> INTEGER .)
    DIV             reduce using rule 1 (expression -> INTEGER .)
    MOD             reduce using rule 1 (expression -> INTEGER .)
    LESS_THAN       reduce using rule 1 (expression -> INTEGER .)
    GREATER_THAN    reduce using rule 1 (expression -> INTEGER .)
    LESS_EQUAL      reduce using rule 1 (expression -> INTEGER .)
    GREATER_EQUAL   reduce using rule 1 (expression -> INTEGER .)
    EQUAL           reduce using rule 1 (expression -> INTEGER .)
    NOT_EQUAL       reduce using rule 1 (expression -> INTEGER .)
    IN              reduce using rule 1 (expression -> INTEGER .)
    LBRACKET        reduce using rule 1 (expression -> INTEGER .)
    $end            reduce using rule 1 (expression -> INTEGER .)
    RBRACKET        reduce using rule 1 (expression -> INTEGER .)
    COMMA           reduce using rule 1 (expression -> INTEGER .)
    RPAREN          reduce using rule 1 (expression -> INTEGER .)
    LPAREN          reduce using rule 1 (expression -> INTEGER .)


state 3

    (2) expression -> REAL .

    PLUS            reduce using rule 2 (expression -> REAL .)
    MINUS           reduce using rule 2 (expression -> REAL .)
    TIMES           reduce using rule 2 (expression -> REAL .)
    DIVIDE          reduce using rule 2 (expression -> REAL .)
    EXPONENT        reduce using rule 2 (expression -> REAL .)
    DIV             reduce using rule 2 (expression -> REAL .)
    MOD             reduce using rule 2 (expression -> REAL .)
    LESS_THAN       reduce using rule 2 (expression -> REAL .)
    GREATER_THAN    reduce using rule 2 (expression -> REAL .)
    LESS_EQUAL      reduce using rule 2 (expression -> REAL .)
    GREATER_EQUAL   reduce using rule 2 (expression -> REAL .)
    EQUAL           reduce using rule 2 (expression -> REAL .)
    NOT_EQUAL       reduce using rule 2 (expression -> REAL .)
    IN              reduce using rule 2 (expression -> REAL .)
    LBRACKET        reduce using rule 2 (expression -> REAL .)
    $end            reduce using rule 2 (expression -> REAL .)
    RBRACKET        reduce using rule 2 (expression -> REAL .)
    COMMA           reduce using rule 2 (expression -> REAL .)
    RPAREN          reduce using rule 2 (expression -> REAL .)
    LPAREN          reduce using rule 2 (expression -> REAL .)


state 4

    (3) expression -> BOOLEAN .
    (14) expression -> BOOLEAN . ORELSE BOOLEAN
    (15) expression -> BOOLEAN . ANDALSO BOOLEAN

    PLUS            reduce using rule 3 (expression -> BOOLEAN .)
    MINUS           reduce using rule 3 (expression -> BOOLEAN .)
    TIMES           reduce using rule 3 (expression -> BOOLEAN .)
    DIVIDE          reduce using rule 3 (expression -> BOOLEAN .)
    EXPONENT        reduce using rule 3 (expression -> BOOLEAN .)
    DIV             reduce using rule 3 (expression -> BOOLEAN .)
    MOD             reduce using rule 3 (expression -> BOOLEAN .)
    LESS_THAN       reduce using rule 3 (expression -> BOOLEAN .)
    GREATER_THAN    reduce using rule 3 (expression -> BOOLEAN .)
    LESS_EQUAL      reduce using rule 3 (expression -> BOOLEAN .)
    GREATER_EQUAL   reduce using rule 3 (expression -> BOOLEAN .)
    EQUAL           reduce using rule 3 (expression -> BOOLEAN .)
    NOT_EQUAL       reduce using rule 3 (expression -> BOOLEAN .)
    IN              reduce using rule 3 (expression -> BOOLEAN .)
    LBRACKET        reduce using rule 3 (expression -> BOOLEAN .)
    $end            reduce using rule 3 (expression -> BOOLEAN .)
    RBRACKET        reduce using rule 3 (expression -> BOOLEAN .)
    COMMA           reduce using rule 3 (expression -> BOOLEAN .)
    RPAREN          reduce using rule 3 (expression -> BOOLEAN .)
    LPAREN          reduce using rule 3 (expression -> BOOLEAN .)
    ORELSE          shift and go to state 27
    ANDALSO         shift and go to state 28


state 5

    (4) expression -> STRING .

    PLUS            reduce using rule 4 (expression -> STRING .)
    MINUS           reduce using rule 4 (expression -> STRING .)
    TIMES           reduce using rule 4 (expression -> STRING .)
    DIVIDE          reduce using rule 4 (expression -> STRING .)
    EXPONENT        reduce using rule 4 (expression -> STRING .)
    DIV             reduce using rule 4 (expression -> STRING .)
    MOD             reduce using rule 4 (expression -> STRING .)
    LESS_THAN       reduce using rule 4 (expression -> STRING .)
    GREATER_THAN    reduce using rule 4 (expression -> STRING .)
    LESS_EQUAL      reduce using rule 4 (expression -> STRING .)
    GREATER_EQUAL   reduce using rule 4 (expression -> STRING .)
    EQUAL           reduce using rule 4 (expression -> STRING .)
    NOT_EQUAL       reduce using rule 4 (expression -> STRING .)
    IN              reduce using rule 4 (expression -> STRING .)
    LBRACKET        reduce using rule 4 (expression -> STRING .)
    $end            reduce using rule 4 (expression -> STRING .)
    RBRACKET        reduce using rule 4 (expression -> STRING .)
    COMMA           reduce using rule 4 (expression -> STRING .)
    RPAREN          reduce using rule 4 (expression -> STRING .)
    LPAREN          reduce using rule 4 (expression -> STRING .)


state 6

    (5) expression -> list .
    (27) expression -> list . CON list

    PLUS            reduce using rule 5 (expression -> list .)
    MINUS           reduce using rule 5 (expression -> list .)
    TIMES           reduce using rule 5 (expression -> list .)
    DIVIDE          reduce using rule 5 (expression -> list .)
    EXPONENT        reduce using rule 5 (expression -> list .)
    DIV             reduce using rule 5 (expression -> list .)
    MOD             reduce using rule 5 (expression -> list .)
    LESS_THAN       reduce using rule 5 (expression -> list .)
    GREATER_THAN    reduce using rule 5 (expression -> list .)
    LESS_EQUAL      reduce using rule 5 (expression -> list .)
    GREATER_EQUAL   reduce using rule 5 (expression -> list .)
    EQUAL           reduce using rule 5 (expression -> list .)
    NOT_EQUAL       reduce using rule 5 (expression -> list .)
    IN              reduce using rule 5 (expression -> list .)
    LBRACKET        reduce using rule 5 (expression -> list .)
    $end            reduce using rule 5 (expression -> list .)
    RBRACKET        reduce using rule 5 (expression -> list .)
    COMMA           reduce using rule 5 (expression -> list .)
    RPAREN          reduce using rule 5 (expression -> list .)
    LPAREN          reduce using rule 5 (expression -> list .)
    CON             shift and go to state 29


state 7

    (6) expression -> tuple .
    (36) expression -> tuple . CON tuple

    PLUS            reduce using rule 6 (expression -> tuple .)
    MINUS           reduce using rule 6 (expression -> tuple .)
    TIMES           reduce using rule 6 (expression -> tuple .)
    DIVIDE          reduce using rule 6 (expression -> tuple .)
    EXPONENT        reduce using rule 6 (expression -> tuple .)
    DIV             reduce using rule 6 (expression -> tuple .)
    MOD             reduce using rule 6 (expression -> tuple .)
    LESS_THAN       reduce using rule 6 (expression -> tuple .)
    GREATER_THAN    reduce using rule 6 (expression -> tuple .)
    LESS_EQUAL      reduce using rule 6 (expression -> tuple .)
    GREATER_EQUAL   reduce using rule 6 (expression -> tuple .)
    EQUAL           reduce using rule 6 (expression -> tuple .)
    NOT_EQUAL       reduce using rule 6 (expression -> tuple .)
    IN              reduce using rule 6 (expression -> tuple .)
    LBRACKET        reduce using rule 6 (expression -> tuple .)
    $end            reduce using rule 6 (expression -> tuple .)
    RBRACKET        reduce using rule 6 (expression -> tuple .)
    COMMA           reduce using rule 6 (expression -> tuple .)
    RPAREN          reduce using rule 6 (expression -> tuple .)
    LPAREN          reduce using rule 6 (expression -> tuple .)
    CON             shift and go to state 30


state 8

    (16) expression -> NOT . BOOLEAN

    BOOLEAN         shift and go to state 31


state 9

    (23) list -> LBRACKET . centerList RBRACKET
    (28) list -> LBRACKET . RBRACKET
    (24) centerList -> . centerList COMMA expression
    (25) centerList -> . expression
    (1) expression -> . INTEGER
    (2) expression -> . REAL
    (3) expression -> . BOOLEAN
    (4) expression -> . STRING
    (5) expression -> . list
    (6) expression -> . tuple
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression EXPONENT expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression MOD expression
    (14) expression -> . BOOLEAN ORELSE BOOLEAN
    (15) expression -> . BOOLEAN ANDALSO BOOLEAN
    (16) expression -> . NOT BOOLEAN
    (17) expression -> . expression LESS_THAN expression
    (18) expression -> . expression GREATER_THAN expression
    (19) expression -> . expression LESS_EQUAL expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression EQUAL expression
    (22) expression -> . expression NOT_EQUAL expression
    (26) expression -> . expression IN list
    (27) expression -> . list CON list
    (29) expression -> . expression LBRACKET expression RBRACKET
    (30) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression IN tuple
    (36) expression -> . tuple CON tuple
    (37) expression -> . HASH expression tuple
    (23) list -> . LBRACKET centerList RBRACKET
    (28) list -> . LBRACKET RBRACKET
    (31) tuple -> . LPAREN centerTuple RPAREN
    (32) tuple -> . LPAREN centerTuple COMMA RPAREN

    RBRACKET        shift and go to state 33
    INTEGER         shift and go to state 2
    REAL            shift and go to state 3
    BOOLEAN         shift and go to state 4
    STRING          shift and go to state 5
    NOT             shift and go to state 8
    LPAREN          shift and go to state 10
    HASH            shift and go to state 11
    LBRACKET        shift and go to state 9

    centerList                     shift and go to state 32
    expression                     shift and go to state 34
    list                           shift and go to state 6
    tuple                          shift and go to state 7

state 10

    (30) expression -> LPAREN . expression RPAREN
    (31) tuple -> LPAREN . centerTuple RPAREN
    (32) tuple -> LPAREN . centerTuple COMMA RPAREN
    (1) expression -> . INTEGER
    (2) expression -> . REAL
    (3) expression -> . BOOLEAN
    (4) expression -> . STRING
    (5) expression -> . list
    (6) expression -> . tuple
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression EXPONENT expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression MOD expression
    (14) expression -> . BOOLEAN ORELSE BOOLEAN
    (15) expression -> . BOOLEAN ANDALSO BOOLEAN
    (16) expression -> . NOT BOOLEAN
    (17) expression -> . expression LESS_THAN expression
    (18) expression -> . expression GREATER_THAN expression
    (19) expression -> . expression LESS_EQUAL expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression EQUAL expression
    (22) expression -> . expression NOT_EQUAL expression
    (26) expression -> . expression IN list
    (27) expression -> . list CON list
    (29) expression -> . expression LBRACKET expression RBRACKET
    (30) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression IN tuple
    (36) expression -> . tuple CON tuple
    (37) expression -> . HASH expression tuple
    (33) centerTuple -> . centerTuple COMMA expression
    (34) centerTuple -> . expression
    (23) list -> . LBRACKET centerList RBRACKET
    (28) list -> . LBRACKET RBRACKET
    (31) tuple -> . LPAREN centerTuple RPAREN
    (32) tuple -> . LPAREN centerTuple COMMA RPAREN

    INTEGER         shift and go to state 2
    REAL            shift and go to state 3
    BOOLEAN         shift and go to state 4
    STRING          shift and go to state 5
    NOT             shift and go to state 8
    LPAREN          shift and go to state 10
    HASH            shift and go to state 11
    LBRACKET        shift and go to state 9

    expression                     shift and go to state 35
    centerTuple                    shift and go to state 36
    list                           shift and go to state 6
    tuple                          shift and go to state 7

state 11

    (37) expression -> HASH . expression tuple
    (1) expression -> . INTEGER
    (2) expression -> . REAL
    (3) expression -> . BOOLEAN
    (4) expression -> . STRING
    (5) expression -> . list
    (6) expression -> . tuple
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression EXPONENT expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression MOD expression
    (14) expression -> . BOOLEAN ORELSE BOOLEAN
    (15) expression -> . BOOLEAN ANDALSO BOOLEAN
    (16) expression -> . NOT BOOLEAN
    (17) expression -> . expression LESS_THAN expression
    (18) expression -> . expression GREATER_THAN expression
    (19) expression -> . expression LESS_EQUAL expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression EQUAL expression
    (22) expression -> . expression NOT_EQUAL expression
    (26) expression -> . expression IN list
    (27) expression -> . list CON list
    (29) expression -> . expression LBRACKET expression RBRACKET
    (30) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression IN tuple
    (36) expression -> . tuple CON tuple
    (37) expression -> . HASH expression tuple
    (23) list -> . LBRACKET centerList RBRACKET
    (28) list -> . LBRACKET RBRACKET
    (31) tuple -> . LPAREN centerTuple RPAREN
    (32) tuple -> . LPAREN centerTuple COMMA RPAREN

    INTEGER         shift and go to state 2
    REAL            shift and go to state 3
    BOOLEAN         shift and go to state 4
    STRING          shift and go to state 5
    NOT             shift and go to state 8
    LPAREN          shift and go to state 10
    HASH            shift and go to state 11
    LBRACKET        shift and go to state 9

    expression                     shift and go to state 37
    tuple                          shift and go to state 7
    list                           shift and go to state 6

state 12

    (7) expression -> expression PLUS . expression
    (1) expression -> . INTEGER
    (2) expression -> . REAL
    (3) expression -> . BOOLEAN
    (4) expression -> . STRING
    (5) expression -> . list
    (6) expression -> . tuple
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression EXPONENT expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression MOD expression
    (14) expression -> . BOOLEAN ORELSE BOOLEAN
    (15) expression -> . BOOLEAN ANDALSO BOOLEAN
    (16) expression -> . NOT BOOLEAN
    (17) expression -> . expression LESS_THAN expression
    (18) expression -> . expression GREATER_THAN expression
    (19) expression -> . expression LESS_EQUAL expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression EQUAL expression
    (22) expression -> . expression NOT_EQUAL expression
    (26) expression -> . expression IN list
    (27) expression -> . list CON list
    (29) expression -> . expression LBRACKET expression RBRACKET
    (30) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression IN tuple
    (36) expression -> . tuple CON tuple
    (37) expression -> . HASH expression tuple
    (23) list -> . LBRACKET centerList RBRACKET
    (28) list -> . LBRACKET RBRACKET
    (31) tuple -> . LPAREN centerTuple RPAREN
    (32) tuple -> . LPAREN centerTuple COMMA RPAREN

    INTEGER         shift and go to state 2
    REAL            shift and go to state 3
    BOOLEAN         shift and go to state 4
    STRING          shift and go to state 5
    NOT             shift and go to state 8
    LPAREN          shift and go to state 10
    HASH            shift and go to state 11
    LBRACKET        shift and go to state 9

    expression                     shift and go to state 38
    list                           shift and go to state 6
    tuple                          shift and go to state 7

state 13

    (8) expression -> expression MINUS . expression
    (1) expression -> . INTEGER
    (2) expression -> . REAL
    (3) expression -> . BOOLEAN
    (4) expression -> . STRING
    (5) expression -> . list
    (6) expression -> . tuple
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression EXPONENT expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression MOD expression
    (14) expression -> . BOOLEAN ORELSE BOOLEAN
    (15) expression -> . BOOLEAN ANDALSO BOOLEAN
    (16) expression -> . NOT BOOLEAN
    (17) expression -> . expression LESS_THAN expression
    (18) expression -> . expression GREATER_THAN expression
    (19) expression -> . expression LESS_EQUAL expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression EQUAL expression
    (22) expression -> . expression NOT_EQUAL expression
    (26) expression -> . expression IN list
    (27) expression -> . list CON list
    (29) expression -> . expression LBRACKET expression RBRACKET
    (30) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression IN tuple
    (36) expression -> . tuple CON tuple
    (37) expression -> . HASH expression tuple
    (23) list -> . LBRACKET centerList RBRACKET
    (28) list -> . LBRACKET RBRACKET
    (31) tuple -> . LPAREN centerTuple RPAREN
    (32) tuple -> . LPAREN centerTuple COMMA RPAREN

    INTEGER         shift and go to state 2
    REAL            shift and go to state 3
    BOOLEAN         shift and go to state 4
    STRING          shift and go to state 5
    NOT             shift and go to state 8
    LPAREN          shift and go to state 10
    HASH            shift and go to state 11
    LBRACKET        shift and go to state 9

    expression                     shift and go to state 39
    list                           shift and go to state 6
    tuple                          shift and go to state 7

state 14

    (9) expression -> expression TIMES . expression
    (1) expression -> . INTEGER
    (2) expression -> . REAL
    (3) expression -> . BOOLEAN
    (4) expression -> . STRING
    (5) expression -> . list
    (6) expression -> . tuple
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression EXPONENT expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression MOD expression
    (14) expression -> . BOOLEAN ORELSE BOOLEAN
    (15) expression -> . BOOLEAN ANDALSO BOOLEAN
    (16) expression -> . NOT BOOLEAN
    (17) expression -> . expression LESS_THAN expression
    (18) expression -> . expression GREATER_THAN expression
    (19) expression -> . expression LESS_EQUAL expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression EQUAL expression
    (22) expression -> . expression NOT_EQUAL expression
    (26) expression -> . expression IN list
    (27) expression -> . list CON list
    (29) expression -> . expression LBRACKET expression RBRACKET
    (30) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression IN tuple
    (36) expression -> . tuple CON tuple
    (37) expression -> . HASH expression tuple
    (23) list -> . LBRACKET centerList RBRACKET
    (28) list -> . LBRACKET RBRACKET
    (31) tuple -> . LPAREN centerTuple RPAREN
    (32) tuple -> . LPAREN centerTuple COMMA RPAREN

    INTEGER         shift and go to state 2
    REAL            shift and go to state 3
    BOOLEAN         shift and go to state 4
    STRING          shift and go to state 5
    NOT             shift and go to state 8
    LPAREN          shift and go to state 10
    HASH            shift and go to state 11
    LBRACKET        shift and go to state 9

    expression                     shift and go to state 40
    list                           shift and go to state 6
    tuple                          shift and go to state 7

state 15
